--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
       <div class="logo">
         <img src="img/logo.png" alt="">
       </div>
+      <div class="toggle">
+        <span></span>
+        <span></span>
+      </div>
       <div class="menu">
         <a href="">welcome to vfruit</a>
         <a href="">about us</a>
@@ -59,10 +63,10 @@
               aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
           </div>
           <div class="download-app">
-            <a href="">
+            <a>
               <img src="img/google-play.png" alt="">
             </a>
-            <a href="">
+            <a>
               <img src="img/app-store.png" alt="">
             </a>
           </div>
